index: better css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <style>
+            a
+            {
+                color: black;
+                text-decoration: underline;
+            }
+                a:focus
+                {
+                    color: black;
+                }
+        </style>
+    </head>
     <body>
         <ul>
             <li>
-                <p>Corporate Landing Page :</br>
+                <p><i>Corporate Landing Page</i></br>
                 <a href="docs/1.corporate-page/index.html">
-                    Web page
+                    - Web page
                 </a>
                 </br>
                 <a href="docs/1.corporate-page/README.pdf">
-                    Documentation
+                    - Documentation
                 </a>
             </li>
         </ul>
