index: fix links

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <ul>
             <li>
                 <p><i>Corporate Landing Page</i></br>
-                <a href="docs/1.corporate-page/index.html">
+                <a href="1.corporate-page/index.html">
                     - Web page
                 </a>
                 </br>
-                <a href="docs/1.corporate-page/README.pdf">
+                <a href="1.corporate-page/README.pdf">
                     - Documentation
                 </a>
             </li>
