index: split css

--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            a
-            {
-                color: black;
-                text-decoration: underline;
-            }
-                a:focus
-                {
-                    color: black;
-                }
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
     <body>
         <ul>
