index: better css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <ul>
             <li>
-                <p><i>Corporate Landing Page</i></br>
+                <p>Corporate Landing Page</br>
                 <a href="1.corporate-page/index.html">
                     - Web page
                 </a>
