index: enhance css

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/index.css">
-    </head>
+         <style type="text/css">
+            #main, #main a {color: black; background: white;}
+            #main, #main p {text-align: center; line-height: 1.5;}
+            #main p.header {width: 40%; margin: 2em 20% 0;}
+            #main p {display: inline-block; width: 40%; text-align: left;}
+            #main div.images {display: inline-block; width: 100%; margin: 0;}
+            #main div.images img {display: inline-block; width: 40%; margin: 1em 20%;}
+        </style>
+   </head>
     <body>
-        <ul>
-            <li>
-                <p>Corporate Landing Page</br>
+        <div id="main">
+            <p class="header">Networks & Navigation (CART 351)</p>
+            </br></br>
+            <hr></hr>
+            
+            <p class="header">Corporate Landing Page</p>
+            </br>
+            <p>
                 <a href="1.corporate-page/index.html">
                     - Web page
                 </a>
@@ -14,7 +27,14 @@
                 <a href="1.corporate-page/README.pdf">
                     - Documentation
                 </a>
-            </li>
-        </ul>
+            </p>
+            </br>
+            
+            <p class="header">Authors</p>
+            <p>
+                - Seva Ivanov</br>
+                - David Rawlia</br>
+            </p>
+        </div>
     </body>
 </html>
