--- a/2.eternal-sunshine/p5-project/game/index.html
+++ b/2.eternal-sunshine/p5-project/game/index.html
@@ -9,6 +9,7 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
     
     <script src="libraries/p5.play.js" type="text/javascript"></script>
+    <script src="libraries/p5.particle.js" type="text/javascript"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
 
