--- a/2.eternal-sunshine/p5-project/game/index.html
+++ b/2.eternal-sunshine/p5-project/game/index.html
@@ -13,6 +13,7 @@
 
     <script src="sketch.js" type="text/javascript"></script>
 
+    <link rel="stylesheet" type="text/css" href="index.css">
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
