index: add url to 2.eternal sunshine game

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
             </p>
             </br>
             
+            <p class="header">Eternal Sunshine Game</p>
+            </br>
+            <p>
+                <a href="2.eternal-sunshine/index.html">
+                    - Game
+                </a>
+                </br>
+                <a href="2.eternal-sunshine/process.html">
+                    - Documentation
+                </a>
+            </p>
+            </br>
+            
             <p class="header">Authors</p>
             <p>
                 - Seva Ivanov</br>
