write partial process

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="header">Eternal Sunshine Game</p>
             </br>
             <p>
-                <a href="2.eternal-sunshine/index.html">
+                <a href="2.eternal-sunshine/game.html">
                     - Game
                 </a>
                 </br>
