--- a/2.eternal-sunshine/process.html
+++ b/2.eternal-sunshine/process.html
@@ -30,9 +30,9 @@
             <p class="header">Week 1 : Research</p>
 
             <p>
-                I decided to take the challenge of implementing Genetic Programming for this video game. I never did any video game before but I had some experience in programming. I decided to attempt at learning and implementing everything by myself.
+                I decided to take the challenge of implementing Genetic Programming for this video game. I never did any video game or Processing before but I have some experience in programming. I decided to attempt at learning and implementing everything by myself.
                 </br></br>
-I started by reading <i>Chapter 9. The Evolution of Code</i> from the <a href="http://natureofcode.com/book/chapter-9-the-evolution-of-code/">Nature of Code</a> book. It was very interesting and douable but the hardest part was to find its usage. In one sentence, Genetic Programming allows you to set a sort of evolutionnary system where based on a fitness score, mutation and parents, the algorithm adapts to perform better at each new iteration (generation).
+I started by reading <i>Chapter 9. The Evolution of Code</i> from the <a href="http://natureofcode.com/book/chapter-9-the-evolution-of-code/">Nature of Code</a> book. It was very interesting and it seemed feasible but the hardest part was to find its usage. In one sentence, Genetic Programming allows you to set a sort of evolutionnary system where based on a fitness score, mutation and parents, the algorithm adapts to perform better at each new iteration (generation).
                 </br></br>
                 <b>Where should I use it?</b>
                 </br></br>
@@ -44,7 +44,7 @@ I started by reading <i>Chapter 9. The Evolution of Code</i> from the <a href="h
                 </a>
             </div>
             <p>
-                By looking at the example of <a href="http://boxcar2d.com/">BoxCar 2D</a>, you realize that one way of using this type of programming would be allowing a user to influence the evolution of your code by testing various parameters i.e. the number of wheels of your car. However, this creates a more greater challenge of actually finding a concepts that allows playful interaction without becoming cumbersome and confusing the user. In the context of this challenge we have to implement a game that tells something about a fictional character and it engages the user into an amusing gameplay without actually distracting the player from the main goal of learning about our character.
+                By looking at the example of <a href="http://boxcar2d.com/">BoxCar 2D</a>, you realize that one way of using this type of programming would be allowing a user to influence the evolution of your code by altering various parameters i.e. the number of wheels of your car. However, this creates a more greater challenge of actually finding a concepts that allows a playful interaction without becoming cumbersome and confusing the user. In the context of this challenge we have to implement a game that tells something about a fictional character and it engages the user into an amusing gameplay without actually distracting the player from the main goal of learning about our character.
                 </br></br>
                 <b>2. Algorithm on its own</b>
             </p>
