--- a/2.eternal-sunshine/game.html
+++ b/2.eternal-sunshine/game.html
@@ -13,7 +13,7 @@
 
     <script src="sketch.js" type="text/javascript"></script>
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="game.css">
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
