fix gameplay add learn_evasion add comments cleanup

--- a/2.eternal-sunshine/game.html
+++ b/2.eternal-sunshine/game.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>game</title>
-    
-    <script src="libraries/p5.js_p5.play-git.js" type="text/javascript"></script>
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
-    
-    <script src="libraries/p5.play.js" type="text/javascript"></script>
-    <script src="libraries/p5.particle.js" type="text/javascript"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Seva Ivanov">
 
-    <script src="sketch.js" type="text/javascript"></script>
+        <title>Eternal Sunshine Game</title>
 
-    <link rel="stylesheet" type="text/css" href="game.css">
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-  </head>
-  <body>
-  </body>
+        <script src="libraries/p5.js_p5.play-git.js" type="text/javascript"></script>
+        <script src="libraries/p5.dom.js" type="text/javascript"></script>
+        <script src="libraries/p5.sound.js" type="text/javascript"></script>
+
+        <script src="libraries/p5.play.js" type="text/javascript"></script>
+        <script src="libraries/p5.particle.js" type="text/javascript"></script>
+
+        <script src="game.js" type="text/javascript"></script>
+
+        <link rel="stylesheet" type="text/css" href="game.css">
+        <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    </head>
+    <body>
+    </body>
 </html>
