add submodules & cleanup

--- a/index.html
+++ b/index.html
@@ -17,21 +17,35 @@
             </br></br>
             <hr></hr>
 
-            <p class="header">Eternal Sunshine Game</p>
+            <p class="header">Eternal Sunshine - Game</p>
             </br>
             <p>
                 <a href="2.eternal-sunshine/game.html">
-                    - Play Game
+                    - play game
                 </a>
                 </br>
                 </br>
                 <a href="2.eternal-sunshine/process.html">
-                    - Documentation
+                    - documentation
                 </a>
             </p>
             </br>
 
-            <p class="header">Crosslinks</p>
+            <p class="header">Netminded - Evil AI simulation</p>
+            </br>
+            <p>
+                <a href="https://sevaivanov.github.io/netminded">
+                    - explore
+                </a>
+                </br>
+                </br>
+                <a href="https://github.com/sevaivanov/netminded/blob/master/docs/process.pdf">
+                    - documentation
+                </a>
+            </p>
+            </br>
+
+            <p class="header">Crosslinks - Chrome extension game</p>
             </br>
             <p>
                 <a href="zip/submissions/4.crosslinks.zip">
